--- a/eSYMb_similarity_rating_project/_static/similarity/experiment_layout.css
+++ b/eSYMb_similarity_rating_project/_static/similarity/experiment_layout.css
@@ -318,6 +318,12 @@ img.red {
 	height: 40px;
 }
 
+.centered-img {
+	display: block;
+	margin: 0 auto;
+	max-width: 100px;
+}
+
 .modal-header {
 	justify-content: center;
 }
